fixed car name word wrap in cards

--- a/resources/sass/product-card/product-card.scss
+++ b/resources/sass/product-card/product-card.scss
@@ -28,7 +28,7 @@
     @extend .product-card-header;
     margin-bottom: 0;
     max-height: 25.5px;
-    overflow-wrap: break-word;
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
